# QT_kurs

./: .gitignore  .gitmodules  README.md
Apk_pogoda/: UG_Aplikacja_Pogodowa.docx
FANN-test/: CMakeLists.txt  CMakeLists.txt.user.33f972a  main.cpp
FANN-test/fann-src/: doublefann.c  fann.c  fixedfann.c  floatfann.c  parallel_doublefann_cpp.cpp  parallel_fann_cpp.cpp  parallel_floatfann_cpp.cpp
Kinia/: Kinia.pro  kiniacynia.cpp  kiniacynia.h  kiniacynia.ui  main.cpp  zasoby.qrc
RolerrRydzyk/: RolerrRydzyk.pro  main.cpp  mainwindow.h  mainwindow.ui
aerobutton/: AeroButton.cpp  AeroButton.h  Qt-test.pnproj  main.cpp  stdconfig.pri  test.pro
aes/: aes.pro  main.cpp
alokacja/: main.cpp
big_int/: big_int.pro  main.cpp
bluetooth/: btscanner.pro  device.cpp  device.h  main.cpp  service.cpp
build-draw-Desktop_Qt_5_6_0_MinGW_32bit-Release/: Makefile  Makefile.Debug  Makefile.Release
build-gra-Android_dla_armeabi_v7a_GCC_4_9_Qt_5_5_1-Debug/: Makefile  android-libgra.so-deployment-settings.json  moc_bullet.cpp
build-gra-Desktop_Qt_5_1_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-gra-Desktop_Qt_5_6_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-iDom-cli/: Makefile  Makefile.Debug  Makefile.Release  ui_idom_client.h
build-iDom_Client-Android_dla_armeabi_GCC_4_9_Qt_5_5_1_18ed74-Debug/: Makefile  android-libiDom_Client.so-deployment-settings.json  moc_idom_client.cpp  ui_idom_client.h
build-iDom_Client-Android_dla_armeabi_v7a_GCC_4_9_Qt_5_1_0-Debug/: Makefile  ui_idom_client.h
build-iDom_Client-Android_dla_armeabi_v7a_GCC_4_9_Qt_5_1_0-Release/: Makefile  moc_idom_client.cpp  ui_idom_client.h
build-sensorgestures-Android_dla_armeabi_v7a_GCC_4_9_Qt_5_5_1-Debug/: Makefile  android-libgesture.so-deployment-settings.json  moc_mainwindow.cpp  ui_mainwindow.h
build-sensorgestures-Desktop_Qt_5_6_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-test-Android_dla_armeabi_v7a_GCC_4_9_Qt_5_5_1-Debug/: Makefile  android-libtest.so-deployment-settings.json  moc_idom_client.cpp  ui_idom_client.h
build-test-Desktop_Qt_5_6_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_idom_client.h
build-youtube_kurs-Android_dla_armeabi_v7a_GCC_4_9_Qt_5_5_1-Debug/: Makefile  android-libyoutube_kurs.so-deployment-settings.json  moc_mainwindow.cpp  ui_mainwindow.h
build-youtube_kurs-Desktop_Qt_5_6_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-youtube_kurs-Desktop_Qt_5_6_0_MinGW_32bit-Release/: Makefile  Makefile.Debug  Makefile.Release
dep_iDomClient22/: CMakeLists.txt
event_counter_test/: main.cpp
fann-GUI/: fann-GUI.pro  fann_gui.cpp  fann_gui.h  fann_gui.ui  main.cpp  trainingthread.cpp  trainingthread.h  types.h
fann_GUI/: fann_GUI.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
gps/: analogclock.cpp  analogclock2.cpp  data_control.cpp  data_control.h  gps.cpp  gps.h  gps.pro  main.cpp  mainwindow.cpp
gra/: bullet.cpp  bullet.h  gra.pro  main.cpp  myrect.cpp  myrect.h
hello_speak/: hello_speak.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
iDomClient2/: CMakeLists.txt  frameoptions.cpp  frameoptions.ui  idom_client.cpp  idom_client.h  idom_client.ui  idomclient2.cpp  idomclient2.h  idomclient2.ui  ikony.qrc  main.cpp  setalarm.ui  variable.h  workerip.cpp  workerip.h
iDomClient2/android/: AndroidManifest.xml
iDomClient2/android/src/org/qtproject/example/Chronometer/: AndroidHelper.java
iDomClient2/blocking_queue/: blocking_queue.cpp  test.cpp
iDomClient2/mybutton/: mybutton.cpp  myqplaintextedit.h
iDomClient22/: mainwindow.ui
iDomClient3/: CMakeLists.txt  frameoptions.h  functions.cpp  idom_client.cpp  idom_client.h  idomclient3.cpp  idomclient3.h  idomclient3.ui  ikony.qrc  volumedialog.h  workerip.h
iDomClient3/android/: AndroidManifest.xml
iDomClient3/android/src/org/qtproject/example/Chronometer/: AndroidHelper.java
iDom_Client/: androidhelper_cyniu.cpp  androidhelper_cyniu.h  filedownloader.cpp  filedownloader.h  frameoptions.cpp  frameoptions.h  frameoptions.ui  functions.cpp  functions.h  iDom_Client.pro  iDom_Client.pro.user.97c27ec  idom_client.cpp  idom_client.cpp.autosave  idom_client.h  idom_client.ui  idom_client.ui.autosave  idom_client.ui.bak  ikony.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myqmlfileforwww.qml  setalarm.cpp  setalarm.h  setalarm.ui  variable.h  volumedialog.cpp  volumedialog.h  volumedialog.ui  workerip.cpp  workerip.h  wwwshowwindow.cpp  wwwshowwindow.h  wwwshowwindow.ui
iDom_client2/: filedownloader.cpp  iDom_client2.pro  idom_client.cpp  idom_client.h  idom_client.ui  ikony.qrc  main.cpp  workerip.cpp  wwwshowwindow.cpp
kamera/: CMakeLists.txt  kamera.pro  main.cpp  mainwindow.cpp  mainwindow.ui
kk/: kk.pro
komendy_test/: command.cpp  command.h  commandexit.cpp  commandexit.h  commandhandler.cpp  commandhandler.h  commandtest.cpp  commandtest.h  komendy_test.pro  main.cpp
komunikacja_z_esp8266/: komunikacja_z_esp8266.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
multi/: dials.cpp  dials.h  dials.ui  main.cpp  multi.pro
nienazwany/: main.cpp  mainwindow.ui  nienazwany.pro
nienazwany1/: main.cpp  mainwindow.cpp  mainwindow.ui  nienazwany1.pro
nienazwany2/: main.cpp  nienazwany2.pro
padzioch/: main.cpp
pilot/: androidhelper_cyniu.h  functions.cpp  functions.h  joypad.cpp  joypad.h  knob.cpp  main.cpp  mybutton.cpp  mybutton.h  mytouchslider.cpp  mytouchslider.h  pilot.pro  pilot.pro.user.05fd2b9  pilotwindow.cpp  pilotwindow.h  pilotwindow.ui  touchbutton.cpp  touchbutton.h  variable.h  workerip.cpp  workerip.h  zasoby.qrc
pilot2_0/: files.qrc  functions.cpp  joypad.h  mytouchslider.cpp  mytouchslider.h  pilot2_0.pro  pilotwindow.cpp  pilotwindow.h  pilotwindow.ui  variable.h  workerip.cpp  zasoby.qrc
prezenty/: data.h  mainwindow.cpp  mainwindow.ui  prezenty.pro
prezenty2/: data.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  prezenty2.pro
prezenty3/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+266 files in other folders)
